--- a/src/components/code/algorithm/js-tasks/pages/elem-task-02.html
+++ b/src/components/code/algorithm/js-tasks/pages/elem-task-02.html
@@ -7,6 +7,7 @@
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://algocode.io/">https://algocode.io/</a></p>
+  <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
 </article>
 
 
@@ -277,31 +278,40 @@ function topKFrenq(nums, k) {
       <li>Заведем два словаря dict1 и dict2 для каждой строки
         <code>const dict1 = {}, dict2 = {};</code>
       </li>
-      <li>Заведем две переменные p1 и p2 для указателя для каждой строки. Поставим указатели на первый символ
-        <code>let p1 = 0, p2 = 0;</code>
-      </li>
       <li>Пройдем циклом по строке
         <code>for (let i = 0; i &lt; s.length; i++)</code>
       </li>
-      <li>Если в первом словаре нет ключа равного символу первой строки, запишем в первый словарь ключ равный символу первой строки и значение равное символу второй строки
-        <code>dict1[s[i]] = t[i];</code>
+      <li>Если в первом словаре есть ключ равный символу первой строки, и его значение не равно символу второй строки, вернем false
+        <code>if (s[i] in dict1 && dict1[s[i]] !== t[i]) return false;</code>
       </li>
-      <li>Если такой символ есть, то проверяем чему равен этот символ во второй строке и сравниваем со значением в первом словаре</li>
-      <li>Елсли совпадает то идем дальше, если не совпадает то вернем false. Строки не изоморфны</li>
-      <li>Если во втором словаре нет ключа равного симолу второй строки, запишем во второй словарь ключ равный символу второй строки и значение равное символу первой строки
-        <code>dict1[t[i]] = s[i];</code>
+      <li>Если во втором словаре есть ключ равный символу второй строки, и его значение не равно символу первой строки, вернем false
+        <code>if (t[i] in dict2 && dict2[t[i]] !== s[i]) return false;</code>
       </li>
-      <li>Если такой символ есть, то проверяем чему равен этот символ в первой строке и сравниваем со значением во втором словаре</li>
-      <li>Елсли совпадает то идем дальше, если не совпадает то вернем false. Строки не изоморфны</li>
+      <li>Запишем в первый словарь ключ равный символу первой строки и значение равное символу второй строки</li>
+      <li>Запишем во второй словарь ключ равный символу второй строки и значение равное символу первой строки</li>
       <li>Когда цикл закончится, то вернем true. Все символы совпали значит строки изоморфны</li>
     </ol>
 <pre>
 function isIsomorhic(s, t) {
   const dict1 = {}, dict2 = {};
+  // dict1 ключ: символ строки s
+  // val: сопоставленный символ строки t
+  // dict2 ключ: симовл строки t
+  // val: сопоставленный символ строки s
+
   let p1 = 0, p2 = 0;
   for (let i = 0; i &lt; s.length; i++) {
-    if (s[i] in dict1)
+    if (dict1[s[i]] && dict1[s[i]] !== t[i]) {
+      return false;
+    }
+    if (dict2[t[i]] && dict2[t[i]] !== s[i]) {
+      return false;
+    }
+    dict1[s[i]] = t[i];
+    dict2[t[i]] = s[i];
   }
+
+  return true;
 }
 </pre>
   </details>
@@ -326,7 +336,7 @@ function isIsomorhic(s, t) {
   <div class="anchor" id="count1"></div>
   <h3>1. Анаграмма</h3>
 
-  <p>У нас есть две строки. Надо проверить является ли одна строка анаграммой другой строки.</p>
+  <p>Даны две строки s и t. Надо проверить является ли одна строка анаграммой другой строки.</p>
   <p>Ограничение: строка содержит только английские буквы в нижнем регистре и ее длина не может превышать 5000 символов</p>
   <p>Анаграмма - слово или фраза, образованная путем перестановки букв другого слова или фразы</p>
   <p>Число различных букв в 2 строках должно совпадать, чтобы одна строка стала анаграммой другой строки</p>
@@ -340,8 +350,8 @@ function isIsomorhic(s, t) {
     <p>Отсортировать две строки и сравнить. Если они равны, то возвращаем true (это анаграмма). Если не равны, то возвращаем false.</p>
     <p>Сложность по времени O(NlogN) - это сложность сортировки. Сложность по памяти O(N) поскольку каждую строку переводим в массив, при сортировки массива вернется новый массив</p>
 
-<pre>function isAnagram(str1, str2) {
-  return str1.split('').sort().join('') == str2.split('').sort().join('');
+<pre>function isAnagram(s, t) {
+  return s.split('').sort().join('') == t.split('').sort().join('');
 }</pre>
   </details>
 
@@ -363,16 +373,17 @@ function isIsomorhic(s, t) {
       <li>Сравниваем два массива и возвращаем результат. Чтобы сравнить два массива, переведем каждый из них в строку.</li>
     </ol>
 
-<pre>function isAnagram(str1, str2) {
+<pre>function isAnagram(s, t) {
+  if (s.length !== t.length) {
+    return false;
+  }
+
   let count1 = Array(26).fill(0);
   let count2 = Array(26).fill(0);
 
-  for (let i = 0; i &lt; str1.length; i++) {
-    count1[str1.charCodeAt(i) - 97]++
-  }
-
-  for (let i = 0; i &lt; str2.length; i++) {
-    count2[str2.charCodeAt(i) - 97]++
+  for (let i = 0; i &lt; s.length; i++) {
+    count1[s.charCodeAt(i) - 97]++;
+    count2[t.charCodeAt(i) - 97]++;
   }
 
   return count1.join() == count2.join();
