--- a/src/components/code/algorithm/js-tasks/pages/elem-task-03.html
+++ b/src/components/code/algorithm/js-tasks/pages/elem-task-03.html
@@ -7,6 +7,7 @@
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://algocode.io/">https://algocode.io/</a></p>
+  <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
 </article>
 
 
