--- a/src/components/code/code-other/pages/elem-c.html
+++ b/src/components/code/code-other/pages/elem-c.html
@@ -1034,14 +1034,14 @@ int main() {
   <div class="anchor" id="printf"></div>
   <h3>Функция printf()</h3>
 
-  <p>Функция printf() обеспечивает форматный вывод данных в поток stdout.</p>
-  <p><strong>Форматный</strong> вывод означает, что в функцию printf() первым аргументом передается строка в двойных кавычках "", которая может содержать <strong>escape-последовательности</strong> и <strong>спецификатор формата</strong>.</p>
-  <code>printf(строка_форматирования, список_аргументов);</code>
-  <p>Если <strong>спецификатор формата</strong> не передается, то список_аргументв не нужен.</p>
-
-  <p>Выведем строку</p>
+  <p>Функция printf() обеспечивает форматный вывод данных в поток stdout (на экран, в консоль).</p>
+  <p><strong>Форматный</strong> вывод означает, что функция printf() сначала форматирует данные и потом выводит их на экран</p>
+  <p>В функцию printf() первым аргументом передается <strong>строка форматирования</strong> в двойных кавычках "". На экран выведется содержимое этой строки.</p>
   <code>printf("Hello");</code>
   <code>Hello</code>
+  <p><strong>Строка форматирования</strong> может содержать <strong>escape-последовательности</strong> и <strong>спецификатор формата</strong>. Если сторока содержит спецификаторы формата, то вторым аргументом передаются переменные, которые нужно поставить на место спецификаторов.</p>
+  <code>printf(строка_форматирования, список_аргументов);</code>
+  <p>Если <strong>спецификатор формата</strong> не передается, то список_аргументв не нужен.
 
   <h4>Escape-последовательности</h4>
   <ol>
@@ -1055,19 +1055,98 @@ int main() {
   </ol>
 
   <h4>Спецификатор формата</h4>
-  <p>Для вывода числа типа int используем спецификатор формата %d</p>
-  <h4>%d int</h4>
-  <code>int a = 100;</code>
-  <code>printf("%d", a);</code>
 
-  <p>Для других целых типов есть свои спецификаторы</p>
+  <p>В printf спецификатор формата имеет общий вид:</p>
+  <code>%[флаги][ширина][.точность][размер]тип</code>
+  <p>Знак % означает - возьми переменную после запятой и распечатай ее значение.</p>
+
+  <ol>
+    <li>
+      <h4>Тип</h4>
+      <p>Тип - это тип переменной, единственный обязательный параметр спецификатора. Остальные параметры могут быть а могут и не быть. Тип переменной задается после знака % и может быть одним из</p>
+      <ul>
+        <li><strong>%c</strong> один символ (char)</li>
+        <li><strong>%d</strong> целое со знаком (int)</li>
+        <li><strong>%i</strong> целое со знаком (int)</li>
+        <li><strong>%u</strong> положительное число (unsigned)</li>
+        <li><strong>%s</strong> строка Символы строки печатаются до первого нулевого символа ("\0") или до заданной точности</li>
+        <li><strong>%o</strong> восьмеричное целое без знака (int)</li>
+        <li><strong>%x</strong> шестнадцатеричное целое без знака, использующее abcdef (int)</li>
+        <li><strong>%X</strong> шестнадцатеричное целое без знака, использующее ABCDEF (int)</li>
+        <li><strong>%f</strong> дробное число в формате d.d (float, double)</li>
+        <li><strong>%F</strong> дробное число в формате d.d (float, double)</li>
+        <li><strong>%e</strong> дробное число в формате ded (float, double)</li>
+        <li><strong>%E</strong> дробное число в формате dEd (float, double)</li>
+        <li><strong>%g</strong> более короткий из форматов %f или %e</li>
+        <li><strong>%G</strong> более короткий из форматов %F или %E</li>
+        <li><strong>%%</strong> знак процента</li>
+        <li><strong>%p</strong> указатель far на void Печатается адрес, указанный аргументом, в формате xxxx:yyyy, где xxxx - сегмент, yyyy- смещение, а x и y -строчные шестнадцатеричные цифры</li>
+      </ul>
+    </li>
+    <li>
+      <h4>Размер</h4>
+      <p>Размер типа может быть одним из:</p>
+      <ul>
+        <li><strong>h</strong> short</li>
+        <li><strong>l</strong> long и unsigned long</li>
+        <li><strong>ll</strong> long long и unsigned long long</li>
+        <li><strong>L</strong> long double</li>
+      </ul>
+    </li>
+    <li>
+      <h4>Точность</h4>
+      <p>.точность указывает сколько знаков после точки печатать</p>
+    </li>
+    <li>
+      <h4>Ширина</h4>
+      <p>Ширина - на печать данных отведено ширина символов (или больше).</p>
+    </li>
+    <li>
+      <h4>Флаги</h4>
+      <ul>
+        <li>+ - указывать явно знак числа, в том числе положительного</li>
+        <li>- - выравнивание влево по указанной ширине</li>
+        <li>пробел - вставляет пробел на месте знака перед положительным числом</li>
+        <li>0 - дополнять слева числа до указанной ширины не пробелами, а 0.</li>
+        <li># - при использовании со спецификаторами "o", "x", "X" будут выводиться и "0", "0x", "0X'. При использовании со спецификаторами "f", "g", "G" десятичная точка будет выводиться, даже если в числе нет дробной части</li>
+      </ul>
+    </li>
+  </ol>
+
+  <h4>Печать строк</h4>
+  <p>Число до точки задает минимальную ширину строки вывода</p>
+  <p>Для печати строк используют тип s (string).</p>
+  <p><strong>%5s</strong>. Строка менее 5 символов дополняется пробелами слева до 5 символов</p>
+  <code>printf("/%5s/\n", "abc");         // /  abc/</code>
+  <p><strong>%05s</strong>. Строка менее 5 символов дополняется нулями слева до 5 символов</p>
+  <code>printf("/%05s/\n", "abc");        // /00abc/</code>
+  <p><strong>%-5s</strong>. Строка менее 5 символов дополняется пробелами справа до 5 символов</p>
+  <code>printf("/%-5s/\n", "abc");        // /abc  /</code>
+  <p><strong>%5s</strong>. На строки длинее заданной ширины никак не влияет</p>
+  <code>printf("/%5s/\n", "abcdefgh");    // /abcdefgh/</code>
+  <p>Число после точки задает максимальную ширину строки вывода</p>
+  <p><strong>%.5s</strong>. Строка более 5 символов будет обрезана до 5 символов</p>
+  <code>printf("/%.5s/\n", "abcdefgh");   // /abcde/</code>
+  <p><strong>%.5s</strong>. На строки короче заданной ширины никак не влияет</p>
+  <code>printf("/%.5s/\n", "abc");        // /abc/</code>
+
+  <h4>Печать целых чисел</h4>
   <h4>%c char</h4>
+  <p>Напечатает символ соответствующий переданному числу в коде ASCII</p>
   <code>char sym = 100;</code>
   <code>printf("%c", sym);</code>
 
   <h4>%h short</h4>
   <code>short sh = 100;</code>
   <code>printf("%h", sh);</code>
+
+  <h4>%i int</h4>
+  <code>int a = 100;</code>
+  <code>printf("%i", a);</code>
+
+  <h4>%d int</h4>
+  <code>int a = 100;</code>
+  <code>printf("%d", a);</code>
 
   <h4>%ld long</h4>
   <code>long c = 100L;</code>
@@ -1093,60 +1172,6 @@ int main() {
   <h4>%llu unsigned long long</h4>
   <code>unsigned long long f = 100ull;</code>
   <code>printf("%llu", f);</code>
-
-  <p>В printf спецификатор формата имеет общий вид:</p>
-  <code>%[флаги][ширина][.точность][размер]тип</code>
-  <p>Знак % означает - возьми переменную после запятой и распечатай ее значение.</p>
-
-  <p>Тип - это тип переменной, единственный обязательный параметр спецификатора. Остальные параметры могут быть а могут и не быть. Тип переменной задается после знака % и может быть одним из</p>
-  <ul>
-    <li><strong>%c</strong> один символ (char)</li>
-    <li><strong>%d</strong> целое со знаком (int)</li>
-    <li><strong>%i</strong> целое со знаком (int)</li>
-    <li><strong>%u</strong> положительное число (unsigned)</li>
-    <li><strong>%s</strong> строка Символы строки печатаются до первого нулевого символа ("\0") или до заданной точности</li>
-    <li><strong>%o</strong> восьмеричное целое без знака (int)</li>
-    <li><strong>%x</strong> шестнадцатеричное целое без знака, использующее abcdef (int)</li>
-    <li><strong>%X</strong> шестнадцатеричное целое без знака, использующее ABCDEF (int)</li>
-    <li><strong>%f</strong> дробное число в формате d.d (float, double)</li>
-    <li><strong>%F</strong> дробное число в формате d.d (float, double)</li>
-    <li><strong>%e</strong> дробное число в формате ded (float, double)</li>
-    <li><strong>%E</strong> дробное число в формате dEd (float, double)</li>
-    <li><strong>%g</strong> более короткий из форматов %f или %e</li>
-    <li><strong>%G</strong> более короткий из форматов %F или %E</li>
-    <li><strong>%%</strong> знак процента</li>
-    <li><strong>%p</strong> указатель far на void Печатается адрес, указанный аргументом, в формате xxxx:yyyy, где xxxx - сегмент, yyyy- смещение, а x и y -строчные шестнадцатеричные цифры</li>
-  </ul>
-
-  <p>Размер типа может быть одним из:</p>
-  <ul>
-    <li><strong>h</strong> short</li>
-    <li><strong>l</strong> long и unsigned long</li>
-    <li><strong>ll</strong> long long и unsigned long long</li>
-    <li><strong>L</strong> long double</li>
-  </ul>
-
-  <p>Ширина - на печать данных отведено ширина символов (или больше).</p>
-  <p>Флаги</p>
-  <ul>
-    <li>+ - указывать явно знак числа, в том числе положительного</li>
-    <li>- - выравнивание влево по указанной ширине</li>
-    <li>пробел - вставляет пробел на месте знака перед положительным числом</li>
-    <li>0 - дополнять слева числа до указанной ширины не пробелами, а 0.</li>
-    <li># - при использовании со спецификаторами "o", "x", "X" будут выводиться и "0", "0x", "0X'. При использовании со спецификаторами "f", "g", "G" десятичная точка будет выводиться, даже если в числе нет дробной части</li>
-  </ul>
-  <li>.точность указывает сколько знаков после точки печатать</li>
-
-  <h4>Печать строк</h4>
-  <p>Для печати строк используют тип s (string).</p>
-  <p>Ширина - печатать n или более символов, с выравниванием вправо или влево (отрицательная ширина), дополняя пробелами. Если строка длиннее, то ширина игнорируется.</p>
-  <p>Точность - если нужно обрезать строку. %.5s - не более 5 символов.</p>
-  <code>printf("/%5s/\n", "abc");         // /  abc/</code>
-  <code>printf("/%05s/\n", "abc");        // /00abc/</code>
-  <code>printf("/%-5s/\n", "abc");        // /abc  /</code>
-  <code>printf("/%5s/\n", "abcdefgh");    // /abcdefgh/</code>
-  <code>printf("/%.5s/\n", "abcdefgh");   // /abcde/</code>
-  <code>printf("/%.5s/\n", "abc");        // /abc/</code>
 </article>
 
 
